--- a/modeling/visualization.ipynb
+++ b/modeling/visualization.ipynb
@@ -52,11 +52,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
-    "preds_df = pd.read_pickle(\"multi_day_6.pkl\")"
+    "preds_df = pd.read_pickle(\"multi_day_7.pkl\")"
    ]
   },
   {
@@ -84,6 +84,28 @@
     "        for method in ['exponential', 'shared_exponential', 'ensemble']:\n",
     "            key = f'predicted_deaths_{method}_{days_ahead}'\n",
     "            preds = [p for p in preds_df[key][outcome > lower_threshold]]\n",
+    "            residuals[colname].append(l1(outcome[outcome > lower_threshold],preds))\n",
+    "            if method == 'shared_exponential':\n",
+    "                key = f'predicted_deaths_{method}_{days_ahead}_demographics'\n",
+    "                preds = [p[-1] for p in preds_df[key][outcome > lower_threshold]]\n",
+    "                residuals[colname].append(l1(outcome[outcome > lower_threshold],preds))    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outcome = np.array([preds_df['deaths'].values[i][-1] for i in range(len(preds_df))])\n",
+    "residuals = {}\n",
+    "for days_ahead in [1, 3, 5, 7]:\n",
+    "    for lower_threshold in [0, 20, 80]:\n",
+    "        colname = f'{days_ahead} day, deaths>={lower_threshold}'\n",
+    "        residuals[colname] = []\n",
+    "        for method in ['with_exponential', 'without_exponential']:\n",
+    "            key = f'predicted_deaths_ensemble_{days_ahead}_{method}'\n",
+    "            preds = [p[-1] for p in preds_df[key][outcome > lower_threshold]]\n",
     "            residuals[colname].append(l1(outcome[outcome > lower_threshold],preds))\n",
     "            if method == 'shared_exponential':\n",
     "                key = f'predicted_deaths_{method}_{days_ahead}_demographics'\n",
@@ -194,6 +216,87 @@
    ],
    "source": [
     "res_df = pd.DataFrame(residuals, index=['exponential', 'shared', 'demographics', 'ensemble'])\n",
+    "res_df = res_df.astype(float).round(2)\n",
+    "res_df.style.highlight_min().format(\"{:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style  type=\"text/css\" >\n",
+       "    #T_8eb70506_743f_11ea_b5ad_18037319446drow0_col1 {\n",
+       "            background-color:  yellow;\n",
+       "        }    #T_8eb70506_743f_11ea_b5ad_18037319446drow0_col2 {\n",
+       "            background-color:  yellow;\n",
+       "        }    #T_8eb70506_743f_11ea_b5ad_18037319446drow0_col3 {\n",
+       "            background-color:  yellow;\n",
+       "        }    #T_8eb70506_743f_11ea_b5ad_18037319446drow0_col6 {\n",
+       "            background-color:  yellow;\n",
+       "        }    #T_8eb70506_743f_11ea_b5ad_18037319446drow0_col8 {\n",
+       "            background-color:  yellow;\n",
+       "        }    #T_8eb70506_743f_11ea_b5ad_18037319446drow1_col0 {\n",
+       "            background-color:  yellow;\n",
+       "        }    #T_8eb70506_743f_11ea_b5ad_18037319446drow1_col4 {\n",
+       "            background-color:  yellow;\n",
+       "        }    #T_8eb70506_743f_11ea_b5ad_18037319446drow1_col5 {\n",
+       "            background-color:  yellow;\n",
+       "        }    #T_8eb70506_743f_11ea_b5ad_18037319446drow1_col7 {\n",
+       "            background-color:  yellow;\n",
+       "        }    #T_8eb70506_743f_11ea_b5ad_18037319446drow1_col9 {\n",
+       "            background-color:  yellow;\n",
+       "        }    #T_8eb70506_743f_11ea_b5ad_18037319446drow1_col10 {\n",
+       "            background-color:  yellow;\n",
+       "        }    #T_8eb70506_743f_11ea_b5ad_18037319446drow1_col11 {\n",
+       "            background-color:  yellow;\n",
+       "        }</style><table id=\"T_8eb70506_743f_11ea_b5ad_18037319446d\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >1 day, deaths>=0</th>        <th class=\"col_heading level0 col1\" >1 day, deaths>=20</th>        <th class=\"col_heading level0 col2\" >1 day, deaths>=80</th>        <th class=\"col_heading level0 col3\" >3 day, deaths>=0</th>        <th class=\"col_heading level0 col4\" >3 day, deaths>=20</th>        <th class=\"col_heading level0 col5\" >3 day, deaths>=80</th>        <th class=\"col_heading level0 col6\" >5 day, deaths>=0</th>        <th class=\"col_heading level0 col7\" >5 day, deaths>=20</th>        <th class=\"col_heading level0 col8\" >5 day, deaths>=80</th>        <th class=\"col_heading level0 col9\" >7 day, deaths>=0</th>        <th class=\"col_heading level0 col10\" >7 day, deaths>=20</th>        <th class=\"col_heading level0 col11\" >7 day, deaths>=80</th>    </tr></thead><tbody>\n",
+       "                <tr>\n",
+       "                        <th id=\"T_8eb70506_743f_11ea_b5ad_18037319446dlevel0_row0\" class=\"row_heading level0 row0\" >with_exponential</th>\n",
+       "                        <td id=\"T_8eb70506_743f_11ea_b5ad_18037319446drow0_col0\" class=\"data row0 col0\" >39977.34</td>\n",
+       "                        <td id=\"T_8eb70506_743f_11ea_b5ad_18037319446drow0_col1\" class=\"data row0 col1\" >7.35</td>\n",
+       "                        <td id=\"T_8eb70506_743f_11ea_b5ad_18037319446drow0_col2\" class=\"data row0 col2\" >9.48</td>\n",
+       "                        <td id=\"T_8eb70506_743f_11ea_b5ad_18037319446drow0_col3\" class=\"data row0 col3\" >3.18</td>\n",
+       "                        <td id=\"T_8eb70506_743f_11ea_b5ad_18037319446drow0_col4\" class=\"data row0 col4\" >17.80</td>\n",
+       "                        <td id=\"T_8eb70506_743f_11ea_b5ad_18037319446drow0_col5\" class=\"data row0 col5\" >41.28</td>\n",
+       "                        <td id=\"T_8eb70506_743f_11ea_b5ad_18037319446drow0_col6\" class=\"data row0 col6\" >5.45</td>\n",
+       "                        <td id=\"T_8eb70506_743f_11ea_b5ad_18037319446drow0_col7\" class=\"data row0 col7\" >20.77</td>\n",
+       "                        <td id=\"T_8eb70506_743f_11ea_b5ad_18037319446drow0_col8\" class=\"data row0 col8\" >21.16</td>\n",
+       "                        <td id=\"T_8eb70506_743f_11ea_b5ad_18037319446drow0_col9\" class=\"data row0 col9\" >18.70</td>\n",
+       "                        <td id=\"T_8eb70506_743f_11ea_b5ad_18037319446drow0_col10\" class=\"data row0 col10\" >275.24</td>\n",
+       "                        <td id=\"T_8eb70506_743f_11ea_b5ad_18037319446drow0_col11\" class=\"data row0 col11\" >811.69</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_8eb70506_743f_11ea_b5ad_18037319446dlevel0_row1\" class=\"row_heading level0 row1\" >without_exponential</th>\n",
+       "                        <td id=\"T_8eb70506_743f_11ea_b5ad_18037319446drow1_col0\" class=\"data row1 col0\" >1.27</td>\n",
+       "                        <td id=\"T_8eb70506_743f_11ea_b5ad_18037319446drow1_col1\" class=\"data row1 col1\" >7.67</td>\n",
+       "                        <td id=\"T_8eb70506_743f_11ea_b5ad_18037319446drow1_col2\" class=\"data row1 col2\" >10.24</td>\n",
+       "                        <td id=\"T_8eb70506_743f_11ea_b5ad_18037319446drow1_col3\" class=\"data row1 col3\" >3.32</td>\n",
+       "                        <td id=\"T_8eb70506_743f_11ea_b5ad_18037319446drow1_col4\" class=\"data row1 col4\" >14.01</td>\n",
+       "                        <td id=\"T_8eb70506_743f_11ea_b5ad_18037319446drow1_col5\" class=\"data row1 col5\" >29.66</td>\n",
+       "                        <td id=\"T_8eb70506_743f_11ea_b5ad_18037319446drow1_col6\" class=\"data row1 col6\" >7.01</td>\n",
+       "                        <td id=\"T_8eb70506_743f_11ea_b5ad_18037319446drow1_col7\" class=\"data row1 col7\" >20.19</td>\n",
+       "                        <td id=\"T_8eb70506_743f_11ea_b5ad_18037319446drow1_col8\" class=\"data row1 col8\" >46.36</td>\n",
+       "                        <td id=\"T_8eb70506_743f_11ea_b5ad_18037319446drow1_col9\" class=\"data row1 col9\" >10.51</td>\n",
+       "                        <td id=\"T_8eb70506_743f_11ea_b5ad_18037319446drow1_col10\" class=\"data row1 col10\" >36.02</td>\n",
+       "                        <td id=\"T_8eb70506_743f_11ea_b5ad_18037319446drow1_col11\" class=\"data row1 col11\" >80.64</td>\n",
+       "            </tr>\n",
+       "    </tbody></table>"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x7f740e14b090>"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res_df = pd.DataFrame(residuals, index=['with_exponential', 'without_exponential'])\n",
     "res_df = res_df.astype(float).round(2)\n",
     "res_df.style.highlight_min().format(\"{:.2f}\")"
    ]
