manual thresholds for idx

--- a/02_hospital_eda.ipynb
+++ b/02_hospital_eda.ipynb
@@ -50,23 +50,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def apply_manual_thresholds(vals, manual_thresholds = {5: 10,\n",
+    "                                                       4: 3,\n",
+    "                                                       3: 2,\n",
+    "                                                       2: 0.8,\n",
+    "                                                       1: 0}):\n",
+    "    new_col = vals * 0\n",
+    "    for key in sorted(manual_thresholds.keys()):\n",
+    "        new_col[vals >= manual_thresholds[key]] = key\n",
+    "    return new_col\n",
+    "\n",
     "# this is number of new predicted deaths\n",
     "for num_days in NUM_DAYS_LIST:\n",
     "    df[f'Predicted Deaths Hospital {num_days}-day'] = ((df[f'Predicted Deaths {num_days}-day'] - df['tot_deaths']) * df['Frac Hospital Employees of County']).fillna(0)\n",
-    "    df[f'Severity {num_days}-day'] = pd.qcut(df[f'Predicted Deaths Hospital {num_days}-day'], 5, labels=False) + 1\n",
+    "    df[f'Severity Percentile {num_days}-day'] = pd.qcut(df[f'Predicted Deaths Hospital {num_days}-day'], 5, labels=False) + 1\n",
+    "    df[f'Severity {num_days}-day'] = apply_manual_thresholds(df[f'Predicted Deaths Hospital {num_days}-day'])\n",
     "#     df[f'Quantile {num_days}-day'] = \n",
     "k = 2\n",
     "s_hosp = f'Predicted Deaths Hospital {k}-day'\n",
+    "s_index = f'Severity {k}-day'\n",
+    "meanings = {\n",
+    "    1: 'Low',\n",
+    "    2: 'Moderate',\n",
+    "    3: 'Substantial',\n",
+    "    4: 'Severe',\n",
+    "    5: 'Critical'\n",
+    "}\n",
+    "\n",
+    "        \n",
     "df = df.sort_values(s_hosp, ascending=False).round(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -101,9 +122,6 @@
        "      <th>Type of Facility</th>\n",
        "      <th>Hospital Employees</th>\n",
        "      <th>...</th>\n",
-       "      <th>Predicted Deaths 2-day</th>\n",
-       "      <th>Predicted Deaths 3-day</th>\n",
-       "      <th>Hospital Employees in County</th>\n",
        "      <th>Frac Hospital Employees of County</th>\n",
        "      <th>Predicted Deaths Hospital 1-day</th>\n",
        "      <th>Severity 1-day</th>\n",
@@ -111,6 +129,9 @@
        "      <th>Severity 2-day</th>\n",
        "      <th>Predicted Deaths Hospital 3-day</th>\n",
        "      <th>Severity 3-day</th>\n",
+       "      <th>Severity Percentile 1-day</th>\n",
+       "      <th>Severity Percentile 2-day</th>\n",
+       "      <th>Severity Percentile 3-day</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -127,15 +148,15 @@
        "      <td>Short Term Acute Care</td>\n",
        "      <td>18142.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>375.10</td>\n",
-       "      <td>447.58</td>\n",
-       "      <td>35475.0</td>\n",
        "      <td>0.51</td>\n",
-       "      <td>26.43</td>\n",
+       "      <td>26.35</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>57.68</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>94.65</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>5</td>\n",
-       "      <td>57.84</td>\n",
        "      <td>5</td>\n",
-       "      <td>94.91</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -151,15 +172,15 @@
        "      <td>Short Term Acute Care</td>\n",
        "      <td>3795.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>546.48</td>\n",
-       "      <td>657.60</td>\n",
-       "      <td>18400.0</td>\n",
        "      <td>0.21</td>\n",
-       "      <td>15.90</td>\n",
+       "      <td>16.19</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>35.80</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>59.14</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>5</td>\n",
-       "      <td>35.16</td>\n",
        "      <td>5</td>\n",
-       "      <td>58.08</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -175,15 +196,15 @@
        "      <td>Short Term Acute Care</td>\n",
        "      <td>3095.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>546.48</td>\n",
-       "      <td>657.60</td>\n",
-       "      <td>18400.0</td>\n",
        "      <td>0.17</td>\n",
-       "      <td>12.97</td>\n",
+       "      <td>13.11</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>28.98</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>47.87</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>5</td>\n",
-       "      <td>28.68</td>\n",
        "      <td>5</td>\n",
-       "      <td>47.37</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -199,15 +220,15 @@
        "      <td>Short Term Acute Care</td>\n",
        "      <td>3001.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>546.48</td>\n",
-       "      <td>657.60</td>\n",
-       "      <td>18400.0</td>\n",
        "      <td>0.16</td>\n",
-       "      <td>12.58</td>\n",
+       "      <td>12.34</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>27.28</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>45.06</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>5</td>\n",
-       "      <td>27.81</td>\n",
        "      <td>5</td>\n",
-       "      <td>45.93</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -223,20 +244,20 @@
        "      <td>Short Term Acute Care</td>\n",
        "      <td>11178.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>194.11</td>\n",
-       "      <td>248.76</td>\n",
-       "      <td>38577.0</td>\n",
        "      <td>0.29</td>\n",
-       "      <td>9.26</td>\n",
+       "      <td>9.27</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>21.49</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>37.34</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>5</td>\n",
-       "      <td>21.48</td>\n",
        "      <td>5</td>\n",
-       "      <td>37.31</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 7537 columns</p>\n",
+       "<p>5 rows × 7540 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -268,45 +289,52 @@
        "3773              NYC Health + Hospitals - New York, NY   \n",
        "2735             Henry Ford Health System - Detroit, MI   \n",
        "\n",
-       "           Type of Facility  Hospital Employees  ... Predicted Deaths 2-day  \\\n",
-       "3736  Short Term Acute Care             18142.0  ...                 375.10   \n",
-       "3732  Short Term Acute Care              3795.0  ...                 546.48   \n",
-       "3717  Short Term Acute Care              3095.0  ...                 546.48   \n",
-       "3773  Short Term Acute Care              3001.0  ...                 546.48   \n",
-       "2735  Short Term Acute Care             11178.0  ...                 194.11   \n",
+       "           Type of Facility  Hospital Employees  ...  \\\n",
+       "3736  Short Term Acute Care             18142.0  ...   \n",
+       "3732  Short Term Acute Care              3795.0  ...   \n",
+       "3717  Short Term Acute Care              3095.0  ...   \n",
+       "3773  Short Term Acute Care              3001.0  ...   \n",
+       "2735  Short Term Acute Care             11178.0  ...   \n",
        "\n",
-       "      Predicted Deaths 3-day  Hospital Employees in County  \\\n",
-       "3736                  447.58                       35475.0   \n",
-       "3732                  657.60                       18400.0   \n",
-       "3717                  657.60                       18400.0   \n",
-       "3773                  657.60                       18400.0   \n",
-       "2735                  248.76                       38577.0   \n",
-       "\n",
-       "      Frac Hospital Employees of County  Predicted Deaths Hospital 1-day  \\\n",
-       "3736                               0.51                            26.43   \n",
-       "3732                               0.21                            15.90   \n",
-       "3717                               0.17                            12.97   \n",
-       "3773                               0.16                            12.58   \n",
-       "2735                               0.29                             9.26   \n",
+       "     Frac Hospital Employees of County  Predicted Deaths Hospital 1-day  \\\n",
+       "3736                              0.51                            26.35   \n",
+       "3732                              0.21                            16.19   \n",
+       "3717                              0.17                            13.11   \n",
+       "3773                              0.16                            12.34   \n",
+       "2735                              0.29                             9.27   \n",
        "\n",
        "      Severity 1-day  Predicted Deaths Hospital 2-day  Severity 2-day  \\\n",
-       "3736               5                            57.84               5   \n",
-       "3732               5                            35.16               5   \n",
-       "3717               5                            28.68               5   \n",
-       "3773               5                            27.81               5   \n",
-       "2735               5                            21.48               5   \n",
+       "3736             5.0                            57.68             5.0   \n",
+       "3732             5.0                            35.80             5.0   \n",
+       "3717             5.0                            28.98             5.0   \n",
+       "3773             5.0                            27.28             5.0   \n",
+       "2735             4.0                            21.49             5.0   \n",
        "\n",
-       "      Predicted Deaths Hospital 3-day  Severity 3-day  \n",
-       "3736                            94.91               5  \n",
-       "3732                            58.08               5  \n",
-       "3717                            47.37               5  \n",
-       "3773                            45.93               5  \n",
-       "2735                            37.31               5  \n",
+       "      Predicted Deaths Hospital 3-day  Severity 3-day  \\\n",
+       "3736                            94.65             5.0   \n",
+       "3732                            59.14             5.0   \n",
+       "3717                            47.87             5.0   \n",
+       "3773                            45.06             5.0   \n",
+       "2735                            37.34             5.0   \n",
        "\n",
-       "[5 rows x 7537 columns]"
+       "      Severity Percentile 1-day  Severity Percentile 2-day  \\\n",
+       "3736                          5                          5   \n",
+       "3732                          5                          5   \n",
+       "3717                          5                          5   \n",
+       "3773                          5                          5   \n",
+       "2735                          5                          5   \n",
+       "\n",
+       "      Severity Percentile 3-day  \n",
+       "3736                          5  \n",
+       "3732                          5  \n",
+       "3717                          5  \n",
+       "3773                          5  \n",
+       "2735                          5  \n",
+       "\n",
+       "[5 rows x 7540 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,16 +356,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "R, C  = 1, 1\n",
     "num_days = 1\n",
-    "nonzero = df[s_hosp] > 0\n",
     "plt.figure(dpi=300, figsize=(7, 3))\n",
-    "plt.subplot(R, C, 1)\n",
     "\n",
-    "plt.plot(df[s_hosp].values, '.-')\n",
+    "offset = 0\n",
+    "for i in [5, 4, 3, 2, 1]:\n",
+    "    idxs = (df[s_index] == i)\n",
+    "    plt.plot(np.arange(offset, offset + idxs.sum()), df[idxs][s_hosp].values, '.-', label=f'{i}: {meanings[i]}')\n",
+    "    offset += idxs.sum()\n",
     "plt.ylabel(s_hosp)\n",
     "plt.xlabel('Hospitals')\n",
-    "\n",
+    "plt.legend()\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
