Fix directory names

--- a/predictions/other_modeling/extract_live_ihme_projections.ipynb
+++ b/predictions/other_modeling/extract_live_ihme_projections.ipynb
@@ -37,7 +37,7 @@
     "MAX_PROJECTION = 10\n",
     "URL = 'https://ihmecovid19storage.blob.core.windows.net/latest/ihme-covid19.zip'\n",
     "RAW_DIREC = 'ihme/raw/'\n",
-    "PROCESSED_DIREC = 'ihme/processed/'"
+    "PROCESSED_DIREC = 'ihme/'"
    ]
   },
   {
@@ -99,14 +99,16 @@
     "    date = directory[:10].replace(\"_\", '-')\n",
     "    if i == 0:\n",
     "        latest_date = date\n",
+    "        latest_direc = directory\n",
     "    else:\n",
     "        delta = datetime.strptime(date, '%Y-%m-%d') - datetime.strptime(latest_date, '%Y-%m-%d')\n",
     "        if delta.days >= 0:\n",
     "            latest_date = date\n",
-    "\n",
+    "            latest_direc = directory\n",
+    "            \n",
     "# Read main data file\n",
-    "csvs = find_csvs(RAW_DIREC + directory + '/')\n",
-    "deaths = pd.read_csv(RAW_DIREC + directory + '/' + csvs[0])\n",
+    "csvs = find_csvs(RAW_DIREC + latest_direc + '/')\n",
+    "deaths = pd.read_csv(RAW_DIREC + latest_direc + '/' + csvs[0])\n",
     "\n",
     "# Get unique locations\n",
     "locations = np.unique(deaths['location'])\n",
