--- a/predictions/other_modeling/extract_live_ihme_projections.ipynb
+++ b/predictions/other_modeling/extract_live_ihme_projections.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,6 +121,72 @@
     "\n",
     "    sub_deaths = sub_deaths[columns].copy().reset_index()\n",
     "    sub_deaths = sub_deaths.sort_values(by='date')\n",
+    "\n",
+    "\n",
+    "    # Calculate projections\n",
+    "    projections = pd.DataFrame([sub_deaths.iloc[0].values], columns=sub_deaths.columns)\n",
+    "\n",
+    "    for j in range(1,MAX_PROJECTION+1):\n",
+    "        projections[str(j) + '_day_cumul_mean'] = sub_deaths.iloc[j]['totdea_mean']\n",
+    "        projections[str(j) + '_day_cumul_lower'] = sub_deaths.iloc[j]['totdea_lower']\n",
+    "        projections[str(j) + '_day_cumul_upper'] = sub_deaths.iloc[j]['totdea_upper']\n",
+    "\n",
+    "        projections[str(j) + '_day_mean'] = sub_deaths.iloc[j]['deaths_mean']\n",
+    "        projections[str(j) + '_day_lower'] = sub_deaths.iloc[j]['deaths_lower']\n",
+    "        projections[str(j) + '_day_upper'] = sub_deaths.iloc[j]['deaths_upper']\n",
+    "\n",
+    "    if i == 0:\n",
+    "        compiled_projections = projections.copy()\n",
+    "    else:\n",
+    "        compiled_projections = compiled_projections.append(projections.copy(), ignore_index=True)\n",
+    "\n",
+    "# Remove unnecessary columns\n",
+    "compiled_projections = compiled_projections.drop(columns=['index', 'totdea_upper', 'totdea_lower',\n",
+    "                                                         'deaths_upper', 'deaths_lower'])\n",
+    "\n",
+    "# Rename column\n",
+    "compiled_projections = compiled_projections.rename(columns={\"totdea_mean\": \"cumul_deaths\",\n",
+    "                                                            \"deaths_mean\": 'deaths'})\n",
+    "\n",
+    "# Change type to int\n",
+    "compiled_projections = compiled_projections.astype({'deaths': 'int32', 'cumul_deaths': 'int32'})\n",
+    "\n",
+    "# Check if file for day behind exists\n",
+    "yesterday_date = datetime.strptime(latest_date, '%Y-%m-%d') - timedelta(days=1)\n",
+    "yesterday_date = yesterday_date.strftime('%Y-%m-%d')\n",
+    "\n",
+    "# Save to file\n",
+    "compiled_projections.to_csv(PROCESSED_DIREC + latest_date + \".csv\", index = None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Columns for compiled data\n",
+    "columns = ['location_name', 'date_reported', 'totdea_mean', 'totdea_lower', 'totdea_upper', 'deaths_mean', 'deaths_lower', 'deaths_upper']\n",
+    "\n",
+    "\n",
+    "latest_date = '2020-03-29'\n",
+    "latest_direc = '2020_03_29'\n",
+    "            \n",
+    "# Read main data file\n",
+    "csvs = find_csvs(RAW_DIREC + latest_direc + '/')\n",
+    "deaths = pd.read_csv(RAW_DIREC + latest_direc + '/' + csvs[0])\n",
+    "\n",
+    "# Get unique locations\n",
+    "locations = np.unique(deaths['location_name'])\n",
+    "\n",
+    "for i, location in enumerate(locations):\n",
+    "\n",
+    "    # Subset on lcoation\n",
+    "    sub_deaths = deaths.loc[deaths['location_name'] == location]\n",
+    "    sub_deaths = sub_deaths.loc[sub_deaths['date_reported'] >= latest_date]\n",
+    "\n",
+    "    sub_deaths = sub_deaths[columns].copy().reset_index()\n",
+    "    sub_deaths = sub_deaths.sort_values(by='date_reported')\n",
     "\n",
     "\n",
     "    # Calculate projections\n",
