update hopsital nb

--- a/hospital_quickstart.ipynb
+++ b/hospital_quickstart.ipynb
@@ -579,8 +579,7 @@
     "      'Mortality national comparison', 'Total Average Daily Census',\n",
     "      \n",
     "#       'IsAcademicHospital', \n",
-    "      'IsUrbanHospital',\n",
-    "      'IsAcuteCareHospital']\n",
+    "      'IsUrbanHospital', 'IsAcuteCareHospital']\n",
     "      \n",
     "      \n",
     "\n",
