Add 14, 21 day ihme projections

--- a/predictions/other_modeling/extract_live_ihme_projections.ipynb
+++ b/predictions/other_modeling/extract_live_ihme_projections.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,8 @@
     "MAX_PROJECTION = 10\n",
     "URL = 'https://ihmecovid19storage.blob.core.windows.net/latest/ihme-covid19.zip'\n",
     "RAW_DIREC = 'ihme/raw/'\n",
-    "PROCESSED_DIREC = 'ihme/'"
+    "PROCESSED_DIREC = 'ihme/'\n",
+    "TWO_WEEKS, THREE_WEEKS = 14, 21"
    ]
   },
   {
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,6 +128,15 @@
     "    projections = pd.DataFrame([sub_deaths.iloc[0].values], columns=sub_deaths.columns)\n",
     "\n",
     "    for j in range(1,MAX_PROJECTION+1):\n",
+    "        projections[str(j) + '_day_cumul_mean'] = sub_deaths.iloc[j]['totdea_mean']\n",
+    "        projections[str(j) + '_day_cumul_lower'] = sub_deaths.iloc[j]['totdea_lower']\n",
+    "        projections[str(j) + '_day_cumul_upper'] = sub_deaths.iloc[j]['totdea_upper']\n",
+    "\n",
+    "        projections[str(j) + '_day_mean'] = sub_deaths.iloc[j]['deaths_mean']\n",
+    "        projections[str(j) + '_day_lower'] = sub_deaths.iloc[j]['deaths_lower']\n",
+    "        projections[str(j) + '_day_upper'] = sub_deaths.iloc[j]['deaths_upper']\n",
+    "        \n",
+    "    for j in [TWO_WEEKS,THREE_WEEKS]:\n",
     "        projections[str(j) + '_day_cumul_mean'] = sub_deaths.iloc[j]['totdea_mean']\n",
     "        projections[str(j) + '_day_cumul_lower'] = sub_deaths.iloc[j]['totdea_lower']\n",
     "        projections[str(j) + '_day_cumul_upper'] = sub_deaths.iloc[j]['totdea_upper']\n",
